minor change to test pages publishing

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Rack::Lint part will just slow the server down.</p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Slow maintained by <a href="https://github.com/kevwil">kevwil</a></p>
+        <p class="copyright">Slow(ly) maintained by <a href="https://github.com/kevwil">kevwil</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
